RESOLVED FIXED178716
RenderThemeCocoa::mediaControlsFormattedStringForDuration may cause a crash due to unhandled Obj-C exception
https://bugs.webkit.org/show_bug.cgi?id=178716
Summary RenderThemeCocoa::mediaControlsFormattedStringForDuration may cause a crash d...
Antoine Quint
Reported 2017-10-24 00:34:04 PDT
We need to wrap calls to NSDateComponentsFormatter in a BEGIN_BLOCK_OBJC_EXCEPTIONS/END_BLOCK_OBJC_EXCEPTIONS block.
Attachments
Patch (2.08 KB, patch)
2017-10-24 00:35 PDT, Antoine Quint
no flags
Patch for landing (2.11 KB, patch)
2017-10-24 09:58 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2017-10-24 00:34:17 PDT
Antoine Quint
Comment 2 2017-10-24 00:35:31 PDT
Antoine Quint
Comment 3 2017-10-24 09:58:16 PDT
Created attachment 324681 [details] Patch for landing
WebKit Commit Bot
Comment 4 2017-10-24 10:32:14 PDT
Comment on attachment 324681 [details] Patch for landing Clearing flags on attachment: 324681 Committed r223896: <https://trac.webkit.org/changeset/223896>
WebKit Commit Bot
Comment 5 2017-10-24 10:32:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.