RenderThemeCocoa::mediaControlsFormattedStringForDuration may cause a crash due to unhandled Obj-C exception https://bugs.webkit.org/show_bug.cgi?id=178716 <rdar://problem/35112900>

Patch by Antoine Quint <graouts@apple.com> on 2017-10-24
Reviewed by Dean Jackson.

* rendering/RenderThemeCocoa.mm:
(WebCore::RenderThemeCocoa::mediaControlsFormattedStringForDuration):

Canonical link: https://commits.webkit.org/194892@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223896 268f45cc-cd09-0410-ab3c-d52691b4dbfc