Source/WebCore/rendering/RenderThemeCocoa.mm
@@ -46,6 +46,7 @@ SOFT_LINK_MAY_FAIL(PassKit, PKDrawApplePayButton, void, (CGContextRef context, C
 
 #if ENABLE(VIDEO)
 #include "LocalizedStrings.h"
+#include <wtf/BlockObjCExceptions.h>
 #endif
 
 namespace WebCore {
@@ -117,6 +118,7 @@ String RenderThemeCocoa::mediaControlsFormattedStringForDuration(const double du
     if (!std::isfinite(durationInSeconds))
         return WEB_UI_STRING("indefinite time", "accessibility help text for an indefinite media controller time value");
 
+    BEGIN_BLOCK_OBJC_EXCEPTIONS;
     if (!m_durationFormatter) {
         m_durationFormatter = adoptNS([NSDateComponentsFormatter new]);
         m_durationFormatter.get().unitsStyle = NSDateComponentsFormatterUnitsStyleFull;
@@ -125,6 +127,7 @@ String RenderThemeCocoa::mediaControlsFormattedStringForDuration(const double du
         m_durationFormatter.get().maximumUnitCount = 2;
     }
     return [m_durationFormatter.get() stringFromTimeInterval:durationInSeconds];
+    END_BLOCK_OBJC_EXCEPTIONS;
 #else
     return emptyString();
 #endif
